remove some code that was comment

--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -143,7 +143,7 @@
         <button type="submit">Log In</button>
         <div class="social">
             <a class="go" href="{% url 'google_login' %}"><i class="fab fa-google"></i> Google</a>
-            <a class="fb" href="{% url 'facebook_login' %}"><i class="fab fa-facebook"></i> Facebook</a> <!-- Add Facebook login similarly -->
+            <a class="fb" href="{% url 'facebook_login' %}"><i class="fab fa-facebook"></i> Facebook</a> 
         </div>
     </form>
 </body>
