--- a/authentication/templates/home.html
+++ b/authentication/templates/home.html
@@ -21,7 +21,9 @@
             excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
             a id nisi.
           </p>
-          <button class="btn btn-primary">Get Started</button>
+          <a href="{% url 'users_management' %}" class="btn btn-primary">
+            Get Started
+          </a>
         </div>
       </div>
     </div>
