Add manage button and confirm deactivate

--- a/authentication/templates/admin/users_management.html
+++ b/authentication/templates/admin/users_management.html
@@ -42,7 +42,15 @@ Management{% endblock%} {% block content %}
         <td>Cy Ganderton</td>
         <td>Drone Controller</td>
         <td>
-          <button class="btn btn-outline btn-success">Active</button>
+          <button
+            class="btn btn-outline btn-success"
+            onclick="confirm('Are you sure you want to deactivate this user?')"
+          >
+            Active
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-soft btn-accent">Manage</button>
         </td>
       </tr>
 
@@ -51,53 +59,53 @@ Management{% endblock%} {% block content %}
         <td>Desktop Support Technician</td>
         <td>Purple</td>
         <td>Cy Ganderton</td>
-        <td>Quality Control Specialist</td>
+        <td>Drone Controller</td>
         <td>
-          <button class="btn btn-outline btn-error">Inactive</button>
+          <button
+            class="btn btn-outline btn-success"
+            onclick="confirm('Are you sure you want to deactivate this user?')"
+          >
+            Active
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-soft btn-accent">Manage</button>
         </td>
       </tr>
-
       <tr class="hover:bg-base-300">
         <td>Hart Hagerty</td>
         <td>Desktop Support Technician</td>
         <td>Purple</td>
         <td>Cy Ganderton</td>
-        <td>Quality Control Specialist</td>
+        <td>Drone Controller</td>
         <td>
-          <button class="btn btn-outline btn-success">Active</button>
+          <button
+            class="btn btn-outline btn-success"
+            onclick="confirm('Are you sure you want to deactivate this user?')"
+          >
+            Active
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-soft btn-accent">Manage</button>
         </td>
       </tr>
-
       <tr class="hover:bg-base-300">
         <td>Hart Hagerty</td>
         <td>Desktop Support Technician</td>
         <td>Purple</td>
         <td>Cy Ganderton</td>
-        <td>Quality Control Specialist</td>
+        <td>Drone Controller</td>
         <td>
-          <button class="btn btn-outline btn-success">Active</button>
+          <button
+            class="btn btn-outline btn-success"
+            onclick="confirm('Are you sure you want to deactivate this user?')"
+          >
+            Active
+          </button>
         </td>
-      </tr>
-
-      <tr class="hover:bg-base-300">
-        <td>Hart Hagerty</td>
-        <td>Desktop Support Technician</td>
-        <td>Purple</td>
-        <td>Cy Ganderton</td>
-        <td>Quality Control Specialist</td>
         <td>
-          <button class="btn btn-outline btn-success">Active</button>
-        </td>
-      </tr>
-
-      <tr class="hover:bg-base-300">
-        <td>Hart Hagerty</td>
-        <td>Desktop Support Technician</td>
-        <td>Purple</td>
-        <td>Cy Ganderton</td>
-        <td>Quality Control Specialist</td>
-        <td>
-          <button class="btn btn-outline btn-success">Active</button>
+          <button class="btn btn-soft btn-accent">Manage</button>
         </td>
       </tr>
       <!-- row 3 -->
