Make login interface for TULogin

--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -44,7 +44,7 @@
                     </div>
                     <!-- Divider -->
                     <div class="divider my-6">OR USE</div>
-                    <div class="text-center">
+                    <div class="text-center flex justify-center gap-2">
                         <!-- Facebook -->
                         <a href="{% url 'facebook_login' %}">
                             <button type="button" data-twe-ripple-init data-twe-ripple-color="light"
@@ -67,6 +67,15 @@
                                         <path
                                             d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z" />
                                     </svg>
+                                </span>
+                            </button>
+                        </a>
+                        <!--TU-->
+                        <a href="{% url 'tu-login-page' %}">
+                            <button type="button" data-twe-ripple-init data-twe-ripple-color="light"
+                                class="w-16 h-[36px] flex items-center justify-center rounded bg-[#f59e0b] text-xs font-medium uppercase leading-normal text-white shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg">
+                                <span class="w-5 h-5 flex items-center justify-center">
+                                    TU
                                 </span>
                             </button>
                         </a>
