Edit title and add active style sidebar

--- a/authentication/templates/admin/dashboard.html
+++ b/authentication/templates/admin/dashboard.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block title %}Admin - Users Management{% endblock%}
+{% extends 'base.html' %} {% block title %}Admin - Dashboard{% endblock %}
+{%block heading %}Dashboard{% endblock %}
+{% block nav1 %}menu-active{% endblock %}
 {% block content %}
 <h1>Dashboard</h1>
 {% endblock%}
