--- a/authentication/templates/admin/reports.html
+++ b/authentication/templates/admin/reports.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %} {% block title %}Admin - Users Management{% endblock%}
-{% block content %}
+{% block heading %}Reports{% endblock %} {% block content %}
 <h1>Report</h1>
 {% endblock%}
