--- a/authentication/templates/admin/solar_management.html
+++ b/authentication/templates/admin/solar_management.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Admin - Users Management{% endblock%}
-{% block content %}
-<h1>Solar management</h1>
+{% extends 'base.html' %} {% block title %}Admin - Solar Management{% endblock%}
+{% block heading %}Solar Management{% endblock %} {% block content %}
+<h1>Solar Management</h1>
 {% endblock%}
