--- a/authentication/templates/admin/upload_history.html
+++ b/authentication/templates/admin/upload_history.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Admin - Users Management{% endblock%}
-{% block content %}
+{% extends 'base.html' %} {% block title %}Admin - Upload & History{% endblock%}
+{% block heading %}Upload & History{% endblock %} {% block content %}
 <h1>Upload & History</h1>
 {% endblock%}
