--- a/authentication/templates/home.html
+++ b/authentication/templates/home.html
@@ -1,31 +1,32 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en" data-theme="bumblebee">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="hero bg-base-200 min-h-screen">
-      <div class="hero-content flex-col lg:flex-row-reverse">
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp"
-          class="max-w-sm rounded-lg shadow-2xl"
-        />
-        <div>
-          <h1 class="text-5xl font-bold">Box Office News!</h1>
-          <p class="py-6">
-            Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-            excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
-            a id nisi.
-          </p>
-          <a href="{% url 'users_management' %}" class="btn btn-primary">
-            Get Started
-          </a>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="hero bg-base-200 min-h-screen">
+    <div class="hero-content flex-col lg:flex-row-reverse">
+      <img src="https://img.daisyui.com/images/stock/photo-1635805737707-575885ab0820.webp"
+        class="max-w-sm rounded-lg shadow-2xl" />
+      <div>
+        <h1 class="text-5xl font-bold">Box Office News!</h1>
+        <p class="py-6">
+          Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
+          excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
+          a id nisi.
+        </p>
+        <a href="{% url 'users_management' %}" class="btn btn-primary">
+          Get Started
+        </a>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
